--- a/LabExam-MKSS-2018-12-07-B-ReneWolter/pom.xml
+++ b/LabExam-MKSS-2018-12-07-B-ReneWolter/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.se.lab</groupId>
-	<artifactId>LabExam-MKSS-2018-12-07-B-MyName</artifactId>
+	<artifactId>LabExam-MKSS-2018-12-07-B-ReneWolter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -16,6 +16,7 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					<compilerArgument>-parameters</compilerArgument>
 				</configuration>
 			</plugin>
 
